--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,9 @@ steps:
   image: alpine
   commands:
   - echo Checking if I am anonymous or any operations
+  - echo #################
   - ls
+  - echo #################
   - cat /etc/*-release
   - whoami
 
